@@ -1,5 +1,9 @@
 2007-02-11  Scott James Remnant  <scott@netsplit.com>
 
+	* init/cfgfile.c (cfg_stanza_normalexit): normalexit is inconsistent,
+	change to "normal exit"
+	* init/tests/test_cfgfile.c (test_stanza_normalexit): Update.
+
 	* init/cfgfile.c (cfg_stanza_start, cfg_stanza_stop) 
 	(cfg_stanza_pre_start, cfg_stanza_post_start) 
 	(cfg_stanza_pre_stop, cfg_stanza_post_stop, cfg_stanza_respawn):
